--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-csv = "1.1"
-serde = { version = "1", features = ["derive"] }
 ndarray = "0.15.4"
+rand = "0.8.5"
+csv = "1.1"
 ndarray-rand = "0.14.0"
+serde = { version = "1", features = ["derive"] }
